[tool.poetry]
name = "binance-arbitrage"
version = "0.1.0"
description = ""
authors = ["sersh4nt <rektf12@gmail.com>"]
readme = "README.md"
packages = [{include = "binance_arbitrage"}]

[tool.poetry.dependencies]
python = "^3.11"
binance-connector = "^2.0.0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
